--- a/AdoptieAnimale.Web/AdoptieAnimale.Web/appsettings.json
+++ b/AdoptieAnimale.Web/AdoptieAnimale.Web/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ApiSettings": {
+    "BaseUrl": "https://localhost:7191/api"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=AdoptieAnimaleIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
