--- a/AdoptieAnimale.Mobile/AdoptieAnimale.Mobile/AdoptieAnimale.Mobile.csproj
+++ b/AdoptieAnimale.Mobile/AdoptieAnimale.Mobile/AdoptieAnimale.Mobile.csproj
@@ -24,6 +24,8 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
 		<TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 		<Platforms>AnyCPU;x64</Platforms>
+	
+		<DisableMauiSplashScreen>true</DisableMauiSplashScreen>
 	</PropertyGroup>
 
 	<ItemGroup>
